[package]
name = "solana-onchain-arbitrage-bot"
version = "0.1.0"
edition = "2021"
description = "A simple Solana onchain arbitrage bot"
repository = "https://github.com/cetipo/solana-onchain-arbitrage-bot"
license = "MIT"

[lib]
name = "solana_onchain_arbitrage_bot"
path = "src/lib.rs"

[dependencies]
# Core Solana dependencies
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"

# SPL token support
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
    "no-entrypoint",
] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

# Async runtime
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"

# Utilities
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0"
rand = "0.8"
bs58 = "0.4"

# HTTP server for health checks
warp = "0.3"

# CLI and display
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Security and encryption
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
borsh = "0.10.3"
bytemuck = { version = "1.16.1", features = ["derive"] }

# Command line argument parsing
clap = "3.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Lazy static initialization
lazy_static = "1.4"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pool_benchmarks"
harness = false

meteora-damm-cpi = { path = "lib/meteora-damm", features = ["no-entrypoint"] }
meteora-vault-cpi = { path = "lib/meteora-vault", features = ["no-entrypoint"] }
